deploy: dafcd3d44b71f43943638f359b4ac8a30c050c07

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -331,7 +331,7 @@
 programming language for a computer to execute. It is one component of
 software, which also includes documentation and other intangible
 components.</p>
-<p>ISO/IEC 2382:2015 via Wikipedia [@enwiki:1233276268]</p>
+<p>ISO/IEC 2382:2015 via Wikipedia (Wikipedia contributors, 2024a)</p>
 </blockquote>
 </div>
 <div class="column" width="25%">
@@ -473,8 +473,7 @@ several times</li>
 </div>
 </div>
 <div class="text-smaller mt-5">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <div class="notes">
 <p>Another famous metaphor is the gardening. The most important aspect of
@@ -487,8 +486,8 @@ software; the software can rot.</p>
 <div class="wide-quote">
 <blockquote>
 <p>Software rot (or software entropy) is the degradation, deterioration,
-or loss of the use or performance of software over time
-[@enwiki:1236668404].</p>
+or loss of the use or performance of software over time (Wikipedia
+contributors, 2024b).</p>
 </blockquote>
 </div>
 <div class="columns mt-2">
@@ -513,8 +512,7 @@ system, a software framework or even a hardware can be outdated to</p>
 <p>The photo shows the San Fransico Muni metro, which still uses floppy
 disks to load its Automatic Train Control System every morning. It is
 planned to replace by the end of the decade. The system works without
-any problems, but the risk of failure is getting higher.
-[@harding2024san]</p>
+any problems, but the risk of failure is getting higher. (Harding, 2024)</p>
 </div>
 <div class="columns">
 <div class="column" width="50%">
@@ -570,8 +568,7 @@ frameworks, libraries, etc. can affect the software</li>
 </div>
 </div>
 <div class="text-smaller mt-5">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <div class="notes">
 <p>Another similarity to gardening is that external factors can influence
@@ -604,8 +601,7 @@ craftmanship (later)</li>
 </div>
 </div>
 <div class="text-smaller">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <h1 id="software-craftmanship"><a class="header" href="#software-craftmanship">software craftmanship</a></h1>
 <div class="text-smaller">
@@ -819,7 +815,40 @@ Interactions</a></li>
 &#10;::: notes
 :::-->
 <h1 id="references"><a class="header" href="#references">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-harding2024san" class="csl-entry">
+<p>Harding, S. (2024). San francisco’s train system still uses floppy
+disks—and will for years. In <em>Ars Technica</em>. <a href="
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    " class="uri">
+https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+</a>.</p>
+</div>
+<div id="ref-stahli2021software" class="csl-entry">
+<p>Stähli, L. (2021). <em>Software Architecture Metaphors — medium.com</em>.
+<a href="
+                    https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4
+                    " class="uri">
+https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4
+</a>.</p>
+</div>
+<div id="ref-enwiki:1233276268" class="csl-entry">
+<p>Wikipedia contributors. (2024a). <em>Computer program — Wikipedia, the free
+encyclopedia</em>. <a href="
+                    https://en.wikipedia.org/w/index.php?title=Computer_program&amp;oldid=1233276268
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Computer_program&amp;oldid=1233276268
+</a>.</p>
+</div>
+<div id="ref-enwiki:1236668404" class="csl-entry">
+<p>Wikipedia contributors. (2024b). <em>Software rot — Wikipedia, the free
+encyclopedia</em>. <a href="
+                    https://en.wikipedia.org/w/index.php?title=Software_rot&amp;oldid=1236668404
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Software_rot&amp;oldid=1236668404
+</a>.</p>
+</div>
 </div>
 
                     </main>
