--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -204,20 +204,20 @@ downwards like a waterfall</li>
 <ul>
 <li>Clients may not know exactly what their requirements are before they
 see working software and so change their requirements, leading to
-redesign, redevelopment, and retesting, and increased costs.
-[@parnas1986rational] In most cases the people who comission the
-building of the a software system do not know exactly what they want
-and are unable to tell us all they know.</li>
+redesign, redevelopment, and retesting, and increased costs. (Parnas &amp;
+Clements, 1986) In most cases the people who comission the building of
+the a software system do not know exactly what they want and are
+unable to tell us all they know.</li>
 </ul>
 <h2 id="modified-waterfall-model"><a class="header" href="#modified-waterfall-model">modified waterfall model</a></h2>
 <figure>
 <img src="figures/waterfall_modified.svg" width="750"
-alt="based on Figure 4. of [@royce1970managing]" />
+alt="based on Figure 4. of (Royce, 1970)" />
 <figcaption aria-hidden="true">based on Figure 4. of <span
-class="citation"
-data-cites="royce1970managing">[@royce1970managing]</span></figcaption>
+class="citation" data-cites="royce1970managing">(Royce,
+1970)</span></figcaption>
 </figure>
-<h1 id="v-model-forsberg1991relationship"><a class="header" href="#v-model-forsberg1991relationship">V model [@forsberg1991relationship]</a></h1>
+<h1 id="v-model-forsberg--mooz-1991"><a class="header" href="#v-model-forsberg--mooz-1991">V model (Forsberg &amp; Mooz, 1991)</a></h1>
 <div class="columns">
 <div class="column" width="50%">
 <ul>
@@ -552,6 +552,22 @@ functionalities.</p>
 <li>quite new methodology</li>
 </ul>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-forsberg1991relationship" class="csl-entry">
+<p>Forsberg, K., &amp; Mooz, H. (1991). The relationship of system engineering
+to the project cycle. <em>Center for Systems Management</em>, <em>5333</em>.</p>
+</div>
+<div id="ref-parnas1986rational" class="csl-entry">
+<p>Parnas, D. L., &amp; Clements, P. C. (1986). A rational design process: How
+and why to fake it. <em>IEEE Transactions on Software Engineering</em>, <em>2</em>,
+251–257.</p>
+</div>
+<div id="ref-royce1970managing" class="csl-entry">
+<p>Royce, W. W. (1970). Managing the development of large software systems:
+Concepts and techniques. <em>Proc. IEEE WESTCON, Los Angeles</em>, 1–9.</p>
+</div>
+</div>
 
                     </main>
 
