--- a/lectures/02_scrum.html
+++ b/lectures/02_scrum.html
@@ -177,7 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <p>this presentation is based on The Scrum Guide (2020)<br>by Ken Schwaber
-and Jeff Sutherland [@schwaber2020scrum]</p>
+and Jeff Sutherland (Schwaber &amp; Sutherland, 2020)</p>
 <p>available from <a href="https://scrumguides.org/">scrumguides.org</a> under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC
 BY-SA 4.0</a></p>
 <p>or download directly <a href="../resources/2020-Scrum-Guide-US.pdf">from here</a></p>
@@ -449,7 +449,7 @@ is learned</li>
 <h2 id="tracking-progress---burndown-chart"><a class="header" href="#tracking-progress---burndown-chart">tracking progress - burndown chart</a></h2>
 <blockquote>
 <p>burndown chart is a graphical representation of work left to do versus
-time [@enwiki:1219224248]</p>
+time (Wikipedia contributors, 2024)</p>
 </blockquote>
 <div class="columns">
 <div class="column" width="50%">
@@ -489,7 +489,7 @@ or cumulative flows.</p>
 work left to do compared to the time (days of the sprint).</p>
 <p>Often used in agile software development methodologies such as Scrum.
 However, burndown charts can be applied to any project with measurable
-progress over time [@enwiki:1219224248].</p>
+progress over time (Wikipedia contributors, 2024).</p>
 <p>Remaining work can be represented in either the number of tasks or the
 amount of time required to finish the tasks. The ideal work line often
 assumes a linear progress, which is not realistic, as tasks are often
@@ -534,7 +534,7 @@ entering the workflow</p>
 </div>
 </div>
 <div class="text-smaller">
-<p>figures are based on [@boogaard2021how]</p>
+<p>figures are based on (Boogaard, 2021)</p>
 </div>
 <div class="notes">
 <p>Read more from <a href="https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/">Kat
@@ -1005,7 +1005,28 @@ incremental one.</li>
 </ul>
 </div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-boogaard2021how" class="csl-entry">
+<p>Boogaard, K. (2021). <em>How to use a cumulative flow diagram – wrike</em>.
+<a href="
+                    https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+                    " class="uri">
+https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+</a>.</p>
+</div>
+<div id="ref-schwaber2020scrum" class="csl-entry">
+<p>Schwaber, K., &amp; Sutherland, J. (2020). <em>The scrum guide</em>.<a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf">
+https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf </a></p>
+</div>
+<div id="ref-enwiki:1219224248" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Burndown chart — Wikipedia, the free
+encyclopedia</em>. <a href="
+                    https://en.wikipedia.org/w/index.php?title=Burndown_chart&amp;oldid=1219224248
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Burndown_chart&amp;oldid=1219224248
+</a>.</p>
+</div>
 </div>
 
                     </main>
