--- a/lectures/03_kanban.html
+++ b/lectures/03_kanban.html
@@ -348,7 +348,7 @@ make these changes</li>
 matter what kind of charts are used as long as they enable a shared
 understanding of the Kanban system’s current health and performance.</p>
 </div>
-<h1 id="toyotas-six-rules-enwiki1239509091"><a class="header" href="#toyotas-six-rules-enwiki1239509091">Toyota’s six rules [@enwiki:1239509091]</a></h1>
+<h1 id="toyotas-six-rules-wikipedia-contributors-2024"><a class="header" href="#toyotas-six-rules-wikipedia-contributors-2024">Toyota’s six rules (Wikipedia contributors, 2024)</a></h1>
 <div class="columns">
 <div class="column" width="70%">
 <ol>
@@ -394,6 +394,14 @@ bolts</figcaption>
 </div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div class="refs">
+</div>
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-enwiki:1239509091" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Kanban — Wikipedia, the free
+encyclopedia</em>.
+<a href="https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091">https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091</a>.</p>
+</div>
 </div>
 
                     </main>
