--- a/lectures/04_requirement_analysis.html
+++ b/lectures/04_requirement_analysis.html
@@ -179,15 +179,15 @@
                         <h1 id="requirement-analysis"><a class="header" href="#requirement-analysis">requirement analysis</a></h1>
 <blockquote>
 <p>Requirement analysis is all about understanding what software is
-supposed to do and the constraints it must operate within
-[@krysik2023sdlc].</p>
+supposed to do and the constraints it must operate within (Krysik,
+2023).</p>
 </blockquote>
 <ul>
 <li>first step of the software development life cycle (SDLC)</li>
 <li>about understanding the task to avoid costly mistakes</li>
 </ul>
 <div class="text-smaller">
-<p>this section is based on [@krysik2023sdlc]</p>
+<p>this section is based on (Krysik, 2023)</p>
 </div>
 <h2 id="steps-of-requirement-analysis"><a class="header" href="#steps-of-requirement-analysis">steps of requirement analysis</a></h2>
 <ol>
@@ -212,7 +212,7 @@ supposed to do and the constraints it must operate within
 <h2 id="2-elicitation-of-requirements"><a class="header" href="#2-elicitation-of-requirements">2. elicitation of requirements</a></h2>
 <blockquote>
 <p>the team actively gathers detailed information about what the software
-needs to do from the identified stakeholders [@krysik2023sdlc]</p>
+needs to do from the identified stakeholders (Krysik, 2023)</p>
 </blockquote>
 <div class="columns">
 <div class="column" width="65%">
@@ -288,7 +288,7 @@ and its implications are understood</p>
 <p>Negotiation comes into play when there are conflicting requirements or
 limitations in resources like time or budget. <br>[…]<br> The goal
 here is to finalize a set of requirements that is achievable and aligns
-with the overall objectives of the project. [@krysik2023sdlc]</p>
+with the overall objectives of the project. (Krysik, 2023)</p>
 </div>
 <h2 id="5-validation-and-verification"><a class="header" href="#5-validation-and-verification">5. validation and verification</a></h2>
 <div class="columns">
@@ -345,7 +345,7 @@ accuracy.”</span></li>
 </li>
 </ul>
 <div class="text-smaller">
-<p>examples from [@femmer2017rapid]</p>
+<p>examples from (Femmer et al., 2017)</p>
 </div>
 <h1 id="requirement-analysis-document-example"><a class="header" href="#requirement-analysis-document-example">requirement analysis document example</a></h1>
 <div class="columns">
@@ -383,7 +383,7 @@ requirements that guide the software development process</li>
 <div class="wide-quote">
 <p>functional requirements define what a system is supposed to do<br>and
 non-functional requirements define how a system is supposed to operate
-[@enwiki:1245895117]</p>
+(Wikipedia contributors, 2024)</p>
 </div>
 <div class="columns mt-3">
 <div class="column" width="50%">
@@ -543,7 +543,7 @@ complete</li>
 for a requirement into implemented, tested, production-ready code,
 <ul>
 <li>as long as the requirement is specific enough that everyone knows
-what’s going on [@north2007what]</li>
+what’s going on (Terhorst-North, 2007)</li>
 </ul>
 </li>
 <li>BDD starts from a user story and focuses on adding the acceptance
@@ -569,7 +569,7 @@ Then  [outcome]
 Scenario 2: ...
 </code></pre>
 <div class="text-smaller">
-<p>taken from [@north2007what] by Daniel Terhorst-North | CC-BY 4.0</p>
+<p>taken from (Terhorst-North, 2007) by Daniel Terhorst-North | CC-BY 4.0</p>
 </div>
 <h2 id="atm-example"><a class="header" href="#atm-example">ATM example</a></h2>
 <pre><code>Story: Account Holder withdraws cash
@@ -597,7 +597,7 @@ Scenario 4: The ATM has insufficient funds
 </code></pre>
 </div>
 <div class="text-smaller">
-<p>taken from [@north2007what] by Daniel Terhorst-North | CC-BY 4.0</p>
+<p>taken from (Terhorst-North, 2007) by Daniel Terhorst-North | CC-BY 4.0</p>
 </div>
 <h2 id="it-may-be-difficult-to-extract-knowledge"><a class="header" href="#it-may-be-difficult-to-extract-knowledge">it may be difficult to extract knowledge</a></h2>
 <ul>
@@ -628,7 +628,33 @@ Scenario 4: The ATM has insufficient funds
 <li>etc.</li>
 </ul>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-femmer2017rapid" class="csl-entry">
+<p>Femmer, H., Fernández, D. M., Wagner, S., &amp; Eder, S. (2017). Rapid
+quality assurance with requirements smells. <em>Journal of Systems and
+Software</em>, <em>123</em>, 190–213.</p>
+</div>
+<div id="ref-krysik2023sdlc" class="csl-entry">
+<p>Krysik, A. (2023). <em>SDLC guide: Requirement analysis in software
+engineering</em>. <a href="
+                    https://stratoflow.com/requirements-analysis/
+                    " class="uri">
+https://stratoflow.com/requirements-analysis/
+</a>.</p>
+</div>
+<div id="ref-north2007what" class="csl-entry">
+<p>Terhorst-North, D. (2007). <em>What’s in a story?</em> <a href="
+                    https://dannorth.net/whats-in-a-story/
+                    " class="uri">
+https://dannorth.net/whats-in-a-story/
+</a>.</p>
+</div>
+<div id="ref-enwiki:1245895117" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Non-functional requirement — Wikipedia,
+the free encyclopedia</em>.
+<a href="https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&amp;oldid=1245895117">https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&amp;oldid=1245895117</a>.</p>
+</div>
 </div>
 
                     </main>
