--- a/print.html
+++ b/print.html
@@ -406,7 +406,7 @@ Mapping</a></li>
 programming language for a computer to execute. It is one component of
 software, which also includes documentation and other intangible
 components.</p>
-<p>ISO/IEC 2382:2015 via Wikipedia [@enwiki:1233276268]</p>
+<p>ISO/IEC 2382:2015 via Wikipedia (Wikipedia contributors, 2024a)</p>
 </blockquote>
 </div>
 <div class="column" width="25%">
@@ -548,8 +548,7 @@ several times</li>
 </div>
 </div>
 <div class="text-smaller mt-5">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <div class="notes">
 <p>Another famous metaphor is the gardening. The most important aspect of
@@ -562,8 +561,8 @@ software; the software can rot.</p>
 <div class="wide-quote">
 <blockquote>
 <p>Software rot (or software entropy) is the degradation, deterioration,
-or loss of the use or performance of software over time
-[@enwiki:1236668404].</p>
+or loss of the use or performance of software over time (Wikipedia
+contributors, 2024b).</p>
 </blockquote>
 </div>
 <div class="columns mt-2">
@@ -588,8 +587,7 @@ system, a software framework or even a hardware can be outdated to</p>
 <p>The photo shows the San Fransico Muni metro, which still uses floppy
 disks to load its Automatic Train Control System every morning. It is
 planned to replace by the end of the decade. The system works without
-any problems, but the risk of failure is getting higher.
-[@harding2024san]</p>
+any problems, but the risk of failure is getting higher. (Harding, 2024)</p>
 </div>
 <div class="columns">
 <div class="column" width="50%">
@@ -645,8 +643,7 @@ frameworks, libraries, etc. can affect the software</li>
 </div>
 </div>
 <div class="text-smaller mt-5">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <div class="notes">
 <p>Another similarity to gardening is that external factors can influence
@@ -679,8 +676,7 @@ craftmanship (later)</li>
 </div>
 </div>
 <div class="text-smaller">
-<p>based on Software Architecture Metaphors by Lisa Stähli
-[@stahli2021software]</p>
+<p>based on Software Architecture Metaphors by Lisa Stähli (Stähli, 2021)</p>
 </div>
 <h1 id="software-craftmanship"><a class="header" href="#software-craftmanship">software craftmanship</a></h1>
 <div class="text-smaller">
@@ -894,7 +890,40 @@ Interactions</a></li>
 &#10;::: notes
 :::-->
 <h1 id="references"><a class="header" href="#references">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-harding2024san" class="csl-entry">
+<p>Harding, S. (2024). San francisco’s train system still uses floppy
+disks—and will for years. In <em>Ars Technica</em>. <a href="lectures/
+                    https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+                    " class="uri">
+https://www.wired.com/story/san-francisco-muni-trains-floppy-disks/
+</a>.</p>
+</div>
+<div id="ref-stahli2021software" class="csl-entry">
+<p>Stähli, L. (2021). <em>Software Architecture Metaphors — medium.com</em>.
+<a href="lectures/
+                    https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4
+                    " class="uri">
+https://medium.com/decoding-tech/software-architecture-metaphors-90992e9be5f4
+</a>.</p>
+</div>
+<div id="ref-enwiki:1233276268" class="csl-entry">
+<p>Wikipedia contributors. (2024a). <em>Computer program — Wikipedia, the free
+encyclopedia</em>. <a href="lectures/
+                    https://en.wikipedia.org/w/index.php?title=Computer_program&amp;oldid=1233276268
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Computer_program&amp;oldid=1233276268
+</a>.</p>
+</div>
+<div id="ref-enwiki:1236668404" class="csl-entry">
+<p>Wikipedia contributors. (2024b). <em>Software rot — Wikipedia, the free
+encyclopedia</em>. <a href="lectures/
+                    https://en.wikipedia.org/w/index.php?title=Software_rot&amp;oldid=1236668404
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Software_rot&amp;oldid=1236668404
+</a>.</p>
+</div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="content"><a class="header" href="#content">content</a></h1>
 <ul>
@@ -924,20 +953,20 @@ downwards like a waterfall</li>
 <ul>
 <li>Clients may not know exactly what their requirements are before they
 see working software and so change their requirements, leading to
-redesign, redevelopment, and retesting, and increased costs.
-[@parnas1986rational] In most cases the people who comission the
-building of the a software system do not know exactly what they want
-and are unable to tell us all they know.</li>
+redesign, redevelopment, and retesting, and increased costs. (Parnas &amp;
+Clements, 1986) In most cases the people who comission the building of
+the a software system do not know exactly what they want and are
+unable to tell us all they know.</li>
 </ul>
 <h2 id="modified-waterfall-model"><a class="header" href="#modified-waterfall-model">modified waterfall model</a></h2>
 <figure>
 <img src="lectures/figures/waterfall_modified.svg" width="750"
-alt="based on Figure 4. of [@royce1970managing]" />
+alt="based on Figure 4. of (Royce, 1970)" />
 <figcaption aria-hidden="true">based on Figure 4. of <span
-class="citation"
-data-cites="royce1970managing">[@royce1970managing]</span></figcaption>
+class="citation" data-cites="royce1970managing">(Royce,
+1970)</span></figcaption>
 </figure>
-<h1 id="v-model-forsberg1991relationship"><a class="header" href="#v-model-forsberg1991relationship">V model [@forsberg1991relationship]</a></h1>
+<h1 id="v-model-forsberg--mooz-1991"><a class="header" href="#v-model-forsberg--mooz-1991">V model (Forsberg &amp; Mooz, 1991)</a></h1>
 <div class="columns">
 <div class="column" width="50%">
 <ul>
@@ -1272,8 +1301,24 @@ functionalities.</p>
 <li>quite new methodology</li>
 </ul>
 <h1 id="references-1"><a class="header" href="#references-1">references</a></h1>
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-forsberg1991relationship" class="csl-entry">
+<p>Forsberg, K., &amp; Mooz, H. (1991). The relationship of system engineering
+to the project cycle. <em>Center for Systems Management</em>, <em>5333</em>.</p>
+</div>
+<div id="ref-parnas1986rational" class="csl-entry">
+<p>Parnas, D. L., &amp; Clements, P. C. (1986). A rational design process: How
+and why to fake it. <em>IEEE Transactions on Software Engineering</em>, <em>2</em>,
+251–257.</p>
+</div>
+<div id="ref-royce1970managing" class="csl-entry">
+<p>Royce, W. W. (1970). Managing the development of large software systems:
+Concepts and techniques. <em>Proc. IEEE WESTCON, Los Angeles</em>, 1–9.</p>
+</div>
+</div>
 <div style="break-before: page; page-break-before: always;"></div><p>this presentation is based on The Scrum Guide (2020)<br>by Ken Schwaber
-and Jeff Sutherland [@schwaber2020scrum]</p>
+and Jeff Sutherland (Schwaber &amp; Sutherland, 2020)</p>
 <p>available from <a href="https://scrumguides.org/">scrumguides.org</a> under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC
 BY-SA 4.0</a></p>
 <p>or download directly <a href="lectures/../resources/2020-Scrum-Guide-US.pdf">from here</a></p>
@@ -1545,7 +1590,7 @@ is learned</li>
 <h2 id="tracking-progress---burndown-chart"><a class="header" href="#tracking-progress---burndown-chart">tracking progress - burndown chart</a></h2>
 <blockquote>
 <p>burndown chart is a graphical representation of work left to do versus
-time [@enwiki:1219224248]</p>
+time (Wikipedia contributors, 2024)</p>
 </blockquote>
 <div class="columns">
 <div class="column" width="50%">
@@ -1585,7 +1630,7 @@ or cumulative flows.</p>
 work left to do compared to the time (days of the sprint).</p>
 <p>Often used in agile software development methodologies such as Scrum.
 However, burndown charts can be applied to any project with measurable
-progress over time [@enwiki:1219224248].</p>
+progress over time (Wikipedia contributors, 2024).</p>
 <p>Remaining work can be represented in either the number of tasks or the
 amount of time required to finish the tasks. The ideal work line often
 assumes a linear progress, which is not realistic, as tasks are often
@@ -1630,7 +1675,7 @@ entering the workflow</p>
 </div>
 </div>
 <div class="text-smaller">
-<p>figures are based on [@boogaard2021how]</p>
+<p>figures are based on (Boogaard, 2021)</p>
 </div>
 <div class="notes">
 <p>Read more from <a href="https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/">Kat
@@ -2101,7 +2146,28 @@ incremental one.</li>
 </ul>
 </div>
 <h1 id="references-2"><a class="header" href="#references-2">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-boogaard2021how" class="csl-entry">
+<p>Boogaard, K. (2021). <em>How to use a cumulative flow diagram – wrike</em>.
+<a href="lectures/
+                    https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+                    " class="uri">
+https://www.wrike.com/blog/how-to-use-cumulative-flow-diagram/
+</a>.</p>
+</div>
+<div id="ref-schwaber2020scrum" class="csl-entry">
+<p>Schwaber, K., &amp; Sutherland, J. (2020). <em>The scrum guide</em>.<a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf">
+https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf </a></p>
+</div>
+<div id="ref-enwiki:1219224248" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Burndown chart — Wikipedia, the free
+encyclopedia</em>. <a href="lectures/
+                    https://en.wikipedia.org/w/index.php?title=Burndown_chart&amp;oldid=1219224248
+                    " class="uri">
+https://en.wikipedia.org/w/index.php?title=Burndown_chart&amp;oldid=1219224248
+</a>.</p>
+</div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><p>this presentation is based on The Kanban Guide (2020) by Daniel S.
 Vacanti</p>
@@ -2275,7 +2341,7 @@ make these changes</li>
 matter what kind of charts are used as long as they enable a shared
 understanding of the Kanban system’s current health and performance.</p>
 </div>
-<h1 id="toyotas-six-rules-enwiki1239509091"><a class="header" href="#toyotas-six-rules-enwiki1239509091">Toyota’s six rules [@enwiki:1239509091]</a></h1>
+<h1 id="toyotas-six-rules-wikipedia-contributors-2024"><a class="header" href="#toyotas-six-rules-wikipedia-contributors-2024">Toyota’s six rules (Wikipedia contributors, 2024)</a></h1>
 <div class="columns">
 <div class="column" width="70%">
 <ol>
@@ -2322,18 +2388,26 @@ bolts</figcaption>
 <h1 id="references-3"><a class="header" href="#references-3">references</a></h1>
 <div class="refs">
 </div>
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-enwiki:1239509091" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Kanban — Wikipedia, the free
+encyclopedia</em>.
+<a href="https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091">https://en.wikipedia.org/w/index.php?title=Kanban&amp;oldid=1239509091</a>.</p>
+</div>
+</div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="requirement-analysis"><a class="header" href="#requirement-analysis">requirement analysis</a></h1>
 <blockquote>
 <p>Requirement analysis is all about understanding what software is
-supposed to do and the constraints it must operate within
-[@krysik2023sdlc].</p>
+supposed to do and the constraints it must operate within (Krysik,
+2023).</p>
 </blockquote>
 <ul>
 <li>first step of the software development life cycle (SDLC)</li>
 <li>about understanding the task to avoid costly mistakes</li>
 </ul>
 <div class="text-smaller">
-<p>this section is based on [@krysik2023sdlc]</p>
+<p>this section is based on (Krysik, 2023)</p>
 </div>
 <h2 id="steps-of-requirement-analysis"><a class="header" href="#steps-of-requirement-analysis">steps of requirement analysis</a></h2>
 <ol>
@@ -2358,7 +2432,7 @@ supposed to do and the constraints it must operate within
 <h2 id="2-elicitation-of-requirements"><a class="header" href="#2-elicitation-of-requirements">2. elicitation of requirements</a></h2>
 <blockquote>
 <p>the team actively gathers detailed information about what the software
-needs to do from the identified stakeholders [@krysik2023sdlc]</p>
+needs to do from the identified stakeholders (Krysik, 2023)</p>
 </blockquote>
 <div class="columns">
 <div class="column" width="65%">
@@ -2434,7 +2508,7 @@ and its implications are understood</p>
 <p>Negotiation comes into play when there are conflicting requirements or
 limitations in resources like time or budget. <br>[…]<br> The goal
 here is to finalize a set of requirements that is achievable and aligns
-with the overall objectives of the project. [@krysik2023sdlc]</p>
+with the overall objectives of the project. (Krysik, 2023)</p>
 </div>
 <h2 id="5-validation-and-verification"><a class="header" href="#5-validation-and-verification">5. validation and verification</a></h2>
 <div class="columns">
@@ -2491,7 +2565,7 @@ accuracy.”</span></li>
 </li>
 </ul>
 <div class="text-smaller">
-<p>examples from [@femmer2017rapid]</p>
+<p>examples from (Femmer et al., 2017)</p>
 </div>
 <h1 id="requirement-analysis-document-example"><a class="header" href="#requirement-analysis-document-example">requirement analysis document example</a></h1>
 <div class="columns">
@@ -2529,7 +2603,7 @@ requirements that guide the software development process</li>
 <div class="wide-quote">
 <p>functional requirements define what a system is supposed to do<br>and
 non-functional requirements define how a system is supposed to operate
-[@enwiki:1245895117]</p>
+(Wikipedia contributors, 2024)</p>
 </div>
 <div class="columns mt-3">
 <div class="column" width="50%">
@@ -2689,7 +2763,7 @@ complete</li>
 for a requirement into implemented, tested, production-ready code,
 <ul>
 <li>as long as the requirement is specific enough that everyone knows
-what’s going on [@north2007what]</li>
+what’s going on (Terhorst-North, 2007)</li>
 </ul>
 </li>
 <li>BDD starts from a user story and focuses on adding the acceptance
@@ -2715,7 +2789,7 @@ Then  [outcome]
 Scenario 2: ...
 </code></pre>
 <div class="text-smaller">
-<p>taken from [@north2007what] by Daniel Terhorst-North | CC-BY 4.0</p>
+<p>taken from (Terhorst-North, 2007) by Daniel Terhorst-North | CC-BY 4.0</p>
 </div>
 <h2 id="atm-example"><a class="header" href="#atm-example">ATM example</a></h2>
 <pre><code>Story: Account Holder withdraws cash
@@ -2743,7 +2817,7 @@ Scenario 4: The ATM has insufficient funds
 </code></pre>
 </div>
 <div class="text-smaller">
-<p>taken from [@north2007what] by Daniel Terhorst-North | CC-BY 4.0</p>
+<p>taken from (Terhorst-North, 2007) by Daniel Terhorst-North | CC-BY 4.0</p>
 </div>
 <h2 id="it-may-be-difficult-to-extract-knowledge"><a class="header" href="#it-may-be-difficult-to-extract-knowledge">it may be difficult to extract knowledge</a></h2>
 <ul>
@@ -2774,7 +2848,33 @@ Scenario 4: The ATM has insufficient funds
 <li>etc.</li>
 </ul>
 <h1 id="references-4"><a class="header" href="#references-4">references</a></h1>
-<div id="refs">
+<div id="refs" class="references csl-bib-body hanging-indent"
+line-spacing="2">
+<div id="ref-femmer2017rapid" class="csl-entry">
+<p>Femmer, H., Fernández, D. M., Wagner, S., &amp; Eder, S. (2017). Rapid
+quality assurance with requirements smells. <em>Journal of Systems and
+Software</em>, <em>123</em>, 190–213.</p>
+</div>
+<div id="ref-krysik2023sdlc" class="csl-entry">
+<p>Krysik, A. (2023). <em>SDLC guide: Requirement analysis in software
+engineering</em>. <a href="lectures/
+                    https://stratoflow.com/requirements-analysis/
+                    " class="uri">
+https://stratoflow.com/requirements-analysis/
+</a>.</p>
+</div>
+<div id="ref-north2007what" class="csl-entry">
+<p>Terhorst-North, D. (2007). <em>What’s in a story?</em> <a href="lectures/
+                    https://dannorth.net/whats-in-a-story/
+                    " class="uri">
+https://dannorth.net/whats-in-a-story/
+</a>.</p>
+</div>
+<div id="ref-enwiki:1245895117" class="csl-entry">
+<p>Wikipedia contributors. (2024). <em>Non-functional requirement — Wikipedia,
+the free encyclopedia</em>.
+<a href="https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&amp;oldid=1245895117">https://en.wikipedia.org/w/index.php?title=Non-functional_requirement&amp;oldid=1245895117</a>.</p>
+</div>
 </div>
 
                     </main>
