deploy: 5411bbffbadff8d0703e8a2e8082cf7e7659cafc

--- a/lectures/04_requirement_analysis.html
+++ b/lectures/04_requirement_analysis.html
@@ -627,6 +627,41 @@ Scenario 4: The ATM has insufficient funds
 <li>data flow diagram</li>
 <li>etc.</li>
 </ul>
+<h1 id="gantt-chart"><a class="header" href="#gantt-chart">gantt chart</a></h1>
+<ul>
+<li>illustrates a project schedule</li>
+<li>practical to construct the schedule from the deadline and go backward<!-- - a task is often scheduled to start immediately when its prerequisites -->
+</li>
+</ul>
+<div class="fragment">
+<p><img src="figures/ccs24.svg" alt="" /></p>
+</div>
+<h1 id="flowchart"><a class="header" href="#flowchart">flowchart</a></h1>
+<div class="columns">
+<div class="column mt-4" width="50%">
+<ul>
+<li>represents a workflow or process</li>
+<li>diagrammatic representation of an algorithm, a step-by-step approach
+to solving a task</li>
+<li>ISO 5807
+<ul>
+<li>published in 1985</li>
+<li>last reviewed in 2019</li>
+</ul>
+</li>
+<li><a href="https://en.wikipedia.org/wiki/Flowchart">Wikipedia / Flowchart</a></li>
+</ul>
+</div>
+<div class="column" width="50%">
+<p><img src="figures/common_flowchart_elements.drawio.svg" alt="" /></p>
+</div>
+</div>
+<h2 id="flowchart-example"><a class="header" href="#flowchart-example">flowchart example</a></h2>
+<figure>
+<img src="figures/proc3.png" height="500" alt="a code review process" />
+<figcaption aria-hidden="true">a code review process</figcaption>
+</figure>
+<!-- # data flow diagram -->
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
