--- a/slides/04_requirement_analysis.html
+++ b/slides/04_requirement_analysis.html
@@ -561,6 +561,50 @@ class="title-slide slide level1">
 </ul>
 </section>
 
+<section id="gantt-chart" class="title-slide slide level1">
+<h1>gantt chart</h1>
+<ul>
+<li>illustrates a project schedule</li>
+<li>practical to construct the schedule from the deadline and go
+backward
+<!-- - a task is often scheduled to start immediately when its prerequisites --></li>
+</ul>
+<div class="fragment">
+<p><img data-src="figures/ccs24.svg" /></p>
+</div>
+</section>
+
+<section>
+<section id="flowchart" class="title-slide slide level1">
+<h1>flowchart</h1>
+<div class="columns">
+<div class="column mt-4" style="width:50%;">
+<ul>
+<li>represents a workflow or process</li>
+<li>diagrammatic representation of an algorithm, a step-by-step approach
+to solving a task</li>
+<li>ISO 5807
+<ul>
+<li>published in 1985</li>
+<li>last reviewed in 2019</li>
+</ul></li>
+<li><a href="https://en.wikipedia.org/wiki/Flowchart">Wikipedia /
+Flowchart</a></li>
+</ul>
+</div><div class="column" style="width:50%;">
+<p><img data-src="figures/common_flowchart_elements.drawio.svg" /></p>
+</div>
+</div>
+</section>
+<section id="flowchart-example" class="slide level2">
+<h2>flowchart example</h2>
+<figure>
+<img data-src="figures/proc3.png" height="500"
+alt="a code review process" />
+<figcaption aria-hidden="true">a code review process</figcaption>
+</figure>
+<!-- # data flow diagram -->
+</section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
