--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -231,6 +231,7 @@ Guide</a></li>
 <li><a href="/software-engineering/slides/04_requirement_analysis.html">requirement
 analysis</a></li>
 <li>user story mapping</li>
+<li><a href="/software-engineering/slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
