--- a/print.html
+++ b/print.html
@@ -232,6 +232,7 @@ Guide</a></li>
 <li><a href="lectures//software-engineering/slides/04_requirement_analysis.html">requirement
 analysis</a></li>
 <li>user story mapping</li>
+<li><a href="lectures//software-engineering/slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
